--- a/search/package.json
+++ b/search/package.json
@@ -11,11 +11,10 @@
     "react-dom": "^16.6.3",
     "react-scripts": "2.1.1",
     "standard": "^11.0.1",
-    "typeface-roboto": "0.0.54",
-    "webrtc-swarm": "^2.9.0"
+    "typeface-roboto": "0.0.54"
   },
   "scripts": {
-    "start": "PORT=3001 react-scripts start",
+    "start": "PORT=3002 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
