--- a/todolist/package.json
+++ b/todolist/package.json
@@ -6,7 +6,7 @@
     "masq-lib": "git+https://github.com/QwantResearch/masq-lib.git",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.1",
+    "react-scripts": "^2.1.3",
     "uikit": "^3.0.0-rc.25"
   },
   "scripts": {
