--- a/todolist/package.json
+++ b/todolist/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "masq-lib": "git+https://github.com/QwantResearch/masq-lib.git",
+    "masq-lib": "git+https://github.com/QwantResearch/masq-lib.git#MASQ-126-add-username-image",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "^2.1.3",
     "uikit": "^3.0.0-rc.25"
   },
+  "homepage": "https://sync-beta.qwantresearch.com/tasks/",
   "scripts": {
     "start": "PORT=3002 react-scripts start",
     "build": "react-scripts build",
