--- a/todolist/package.json
+++ b/todolist/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "masq-lib": "git+https://github.com/QwantResearch/masq-lib.git",
+    "masq-lib": "git+https://github.com/QwantResearch/masq-lib.git#catchDisconnect",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "^2.1.3",
