--- a/todolist/package.json
+++ b/todolist/package.json
@@ -7,8 +7,8 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "^2.1.3",
-    "uikit": "^3.0.0-rc.25",
-    "webpack-cli": "^3.2.3"
+    "uikit": "^3.0.3",
+    "webpack-cli": "^3.3.0"
   },
   "scripts": {
     "start": "PORT=3002 react-scripts start",
